# supercomputing

./: .gitignore  CMakeLists.txt
P01/mach/: mach.cpp
P01/mach0/: CMakeLists.txt  mach0UTest.cpp
P01/mach1/: CMakeLists.txt  mach1.cpp
P01/mach2/: CMakeLists.txt  mach2.cpp
P01/mach3/: CMakeLists.txt  mach3.cpp
P01/mach4/: CMakeLists.txt
P01/zeta0/: CMakeLists.txt  zeta0UTest.cpp  zeta0VTest.cpp
P01/zeta1/: zeta1.cpp
P01/zeta2/: zeta2.cpp
P01/zeta4/: zeta4.cpp
P02/: CMakeLists.txt  Matrix2D.cpp  Matrix2D.h  poisson.c  poisson.cpp
mach/: CMakeLists.txt  mach.cpp  mach.h
mach0/: CMakeLists.txt  mach0.cpp  mach0Test.cpp  mach0UTest.cpp  mach0VTest.cpp
mach1/: mach1.cpp
mach2/: mach2.cpp
mach3/: mach3.cpp
mach4/: mach4.cpp
zeta/: CMakeLists.txt  zeta.cpp  zeta.h
zeta0/: CMakeLists.txt  zeta0.cpp  zeta0UTest.cpp  zeta0VTest.cpp
zeta1/: CMakeLists.txt  hello.cpp  zeta1.cpp
zeta2/: CMakeLists.txt  zeta2.cpp
zeta3/: CMakeLists.txt  zeta3.cpp
zeta4/: CMakeLists.txt  zeta4.cpp
